<resources>
    <string name="app_name">TerraDemo</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="connect_to_shealth">Connect to Samsung Health</string>

    <string name="notice">Notice</string>
    <string name="msg_perm_acquired">All permissions should be acquired</string>
    <string name="msg_conn_not_available">Connection with Samsung Health is not available</string>
    <string name="activity">ACTIVITY</string>
    <string name="athlete">ATHLETE</string>
    <string name="daily">DAILY</string>
    <string name="sleep">SLEEP</string>
    <string name="body">BODY</string>
    <string name="menstruation">MENSTRUATION</string>

    <string name="terra">TERRA</string>

    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>


    <string name="msg_req_install">Please install Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">Please enable Samsung Health</string>
    <string name="msg_req_agree">Please agree to Samsung Health policy</string>
    <string name="msg_req_available">Please make Samsung Health available</string>
    <string name="enter_date">Enter Date</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="connect_terra">Connect Terra</string>
    <string name="terra_demo">Terra Demo</string>
    <string name="terra_samsung">Terra Samsung</string>
    <string name="title_activity_terra_server">TerraServer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="generate_auth">Generate Auth</string>
</resources>